<resources>
    <string name="app_name">Mic</string>
    <string name="google_key">AIzaSyDOx-Hgq_GBt7zstNRcp-Y_6UjqhGSdChA</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="video_saved_at">Video saves at : $%1s</string>
    <string name="title_activity_select_picture">SiliCompressor Demo</string>
    <string name="choose_a_pic">Choose a picture</string>
    <string name="video_is_being_compress">Compression of the video is in progress</string>
    <string name="video_compression_complete">Video Compression Complete</string>
    <string name="select_file">Select file</string>
    <string name="compress_video">Compress video</string>
    <string name="checkbox_text">I agree to Terms of Use and Policies of the Online Signing Competition - MIC.</string>
    <string name="name_hint">(The name you entered will not be Changed throughout the competition)</string>
    <string name="email_hin">(This mail ID will be used to retrieve your account and for alternate signin)</string>
    <string name="about_text">MIC is an Online Singing Competition Platform, designed and developed with the vision of bringing Transparency, Recognition and Queless Crowd. The platform brings Ease and Economical Relief to Young, Budding and Passionate Singers.</string>
    <string name="who_we_are">MIC is a unit of Admere Selvyn Private Limited. The idea of helping young artists, earn recognition and win a cheering fan base was given by Mr. Ritesh Anand, CEO and Founder of worlds first digital singing competition paltform.</string>
    <string name="mic_vision">Revolution is the music Industry in favour young, Budding and Passionate Artists. Knowing the value of Struggl, Dreams, Hardwork, Time and Money, we bring</string>
    <string name="best_industry">Best Industry Experts.</string>
    <string name="Exclusive">Exclusive Promotion Worldwide.</string>
    <string name="record_lebel">Record lebel Projects (Official Originals and Covers).</string>
    <string name="opportunities">Opportunities for Playback Singing.</string>
    <string name="brand_recognition">Brand Recognition through Stage Shows throughout India.</string>
    <string name="notification_descriipiton">The notitficationn settings are applicable for this application only</string>
    <string name="pp">Privacy Policy Your website may use the Privacy Policy given below:</string>
    <string name="pp_1">This Privacy Policy is an electronic record in the form of an electronic contract formed under the information Technology Act, 2000 and the rules made thereunder and the amended provisions pertaining to electronic documents / records in various statutes as amended by the information Technology Act, 2000. This Privacy Policy does not require any physical, electronic or digital signature.</string>
    <string name="pp_2">This Privacy Policy is a legally binding document between you and “MIC” (both terms defined below). The terms of this Privacy Policy will be effective upon your acceptance of the same (directly or indirectly in electronic form, by clicking on the “I accept” tab or by use of the website or by other means) and will govern the relationship between you and “MIC” for your use of the website “Website” (defined below).</string>
    <string name="pp_3">This document is published and shall be construed in accordance with the provisions of the Information Technology (reasonable security practices and procedures and sensitive personal data of information) rules, 2011 under Information Technology Act, 2000; that require publishing of the Privacy Policy for collection, use, storage and transfer of sensitive personal data or information.</string>
    <string name="pp_4">Please read this Privacy Policy carefullyby using the Website, you indicate that you understand, agree and consent to this Privacy Policy. If you do not agree with the terms of this Privacy Policy, please do not use this Website.</string>
    <string name="pp_5">By providing us your Information or by making use of the facilities provided by the Website, You hereby consent to the collection, storage, processing and transfer of any or all of Your Personal Information and Non-Personal Information by us as specified under this Privacy Policy. You further agree that such collection, use, storage and transfer of Your Information shall not cause any loss or wrongful gain to you or any other person.</string>
    <string name="pp_6">USERINFORMATION</string>
    <string name="pp_7">To avail certain services on our Websites, users are required to provide certain information for theregistration process namely: - a) your name, b) email address, c) sex, d) age, e) PIN code, f) credit card or debit card details g) medical records and history h) sexual orientation, i) biometric information, j) password etc., and / or your occupation, interests, and the like. The Information as supplied by the users enables us to improve our sites and provide you the most user-friendly experience.</string>
    <string name="pp_8">All required information is service dependent and we may use the above said user information to, maintain, protect, and improve its services (including advertising services) and for developing new services.</string>
    <string name="pp_9">Such information will not be considered as sensitive if it is freely available and accessible in the public domain or is furnished under the Right to Information Act, 2005 or any other law for the time being in force.</string>
    <string name="pp_10">COOKIES</string>
    <string name="pp_11">To improve the responsiveness of the sites for our users, we may use "cookies", or similar electronic tools to collect information to assign each visitor a unique, random number as a User Identification (User ID) to understand the users individual interests using the Identified Computer. Unless you voluntarily identify yourself (through registration, for example), we will have no way of knowing who you are, even if we assign a cookie to your computer. The only personal information a cookie can contain is information you supply (an example of this is when you ask for our Personalized Horoscope). A cookie cannot read data off your hard drive. Our advertisers may also assign their own cookies to your browser (if you click on their ads), a process that we do not control.</string>
    <string name="pp_12">Our web servers automatically collect limited information about your computers connection to the Internet, including your IP address, when you visit our site. (Your IP address is a number that lets computers attached to the Internet know where to send you data -- such as the web pages you view.) Your IP address does not identify you personally. We use this information to deliver our web pages to you upon request, to tailor our site to the interests of our users, to measure traffic within our site and let advertisers know the geographic locations from where our visitors come.</string>
    <string name="pp_13"> LINKS TO THE OTHER SITES</string>
    <string name="pp_14">Our policy discloses the privacy practices for our own web site only. Our site provides links to other websites also that are beyond our control. We shall in no way be responsible in way for your use of such sites.</string>
    <string name="pp_15">INFORMATIONSHARING</string>
    <string name="pp_16">We shares the sensitive personal information to any third party without obtaining the prior consent of the user in the following limited circumstances:.</string>
    <string name="pp_17">(a) When it is requested or required by law or by any court or governmental agency or authority to disclose, for the purpose of verification of identity, or for the prevention, detection, investigation including cyber incidents, or for prosecution and punishment of offences. These disclosures are made in good faith and belief that such disclosure is reasonably necessary for enforcing these Terms; for complying with the applicable laws and regulations.</string>
    <string name="pp_18">(b) We proposes to share such information within its group companies and officers and employees of such group companies for the purpose of processing personal information on its behalf. We also ensure that these recipients of such information agree to process such information based on our instructions and in compliance with this Privacy Policy and any other appropriate confidentiality and security measures.</string>
    <string name="pp_19">INFORMATION SECURITY</string>
    <string name="pp_20">We take appropriate security measures to protect against unauthorized access to or unauthorized alteration, disclosure or destruction of data. These include internal reviews of our data collection, storage and processing practices and security measures, including appropriate encryption and physical security measures to guard against unauthorized access to systems where we store personal data.</string>
    <string name="pp_21">All information gathered on our Website is securely stored within our controlled database. The database is stored on servers secured behind a firewall; access to the servers is password-protected and is strictly limited. However, as effective as our security measures are, no security system is impenetrable. We cannot guarantee the security of our database, nor can we guarantee that information you supply will not be intercepted while being transmitted to us over the Internet. And, of course, any information you include in a posting to the discussion areas is available to anyone with Internet access.</string>
    <string name="pp_22">However the internet is an ever evolving medium. We may change our Privacy Policy from time to time to incorporate necessary future changes. Of course, our use of any information we gather will always be consistent with the policy under which the information was collected, regardless of what the new policy may be.</string>
    <string name="pp_23">GRIEVANCE REDRESSALY</string>
    <string name="pp_24">Redressal Mechanism: Any complaints, abuse or concerns with regards to content and or comment or breach of these terms shall be immediately informed to the designated Grievance Officer as mentioned below via in writing or through email signed with the electronic signature to Ritesh Anand. ("Grievance Officer").</string>
    <string name="pp_25">Mr. Ritesh Anand(Grievance Officer) Website: www.onlinemic.in Company Name:AdmereSelvyn Private Limited Address:156, Admere Villa, KusumVihar, Koyla Nagar, Dhanbad (JH) - 826005 Email: care@onlinemic.in Phone:+91-9430177775</string>
    <string name="rc_p"> Refund and Cancellation Policy</string>
    <string name="rc_1">    Our focus is complete customer satisfaction. In the event, if you are displeased with the services provided, we willhelp you, provided the reasons are genuine and proved after investigation. Please read the fine prints of each services provided by us, it provides all the details about the registration.</string>
    <string name="rc_2">Our focus is complete customer satisfaction. In the event, if you are displeased with the services provided, we willhelp you, provided the reasons are genuine and proved after investigation. Please read the fine prints of each services provided by us, it provides all the details about the registration.</string>
    <string name="rc_3">Our Policy for the cancellation and refund will be as follows: Cancellation Policy</string>
    <string name="rc_4">There is no Cancellation Policy as such in this competition.</string>
    <string name="rc_5">Once you register with this portal, payment done by you cannot be refunded. The registration fee paid by you is your choice of becoming the participant of this competition.</string>
    <string name="address">Admere Selvyn Private Limited 156, Admere Villa,Kusum Vihar,BCCL Township Dhanbad, Jharkhand -826005</string>
    <string name="contact">+91 9430177775</string>
    <string name="mail">care@onlinemic.in</string>
</resources>