<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/mic_background"
    android:fillViewport="true"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="16dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:gravity="center"
            android:text="Reach Us"
            android:textColor="@color/white"
            android:textSize="20dp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="6dp"
            android:layout_marginBottom="20dp"
            android:gravity="center"
            android:text="We would Love to hear from you!"
            android:textColor="@color/yellow"
            android:textSize="12dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:orientation="horizontal"
            android:weightSum="20">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="15">

                <ImageView
                    android:layout_width="70dp"
                    android:layout_height="70dp"
                    android:layout_gravity="center"
                    android:background="@drawable/circle"
                    android:padding="16dp"
                    android:src="@drawable/address" />
            </RelativeLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="25dp"
                android:layout_weight="5"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Head Office"
                    android:textColor="@color/yellow"
                    android:textSize="15dp"
                    android:textStyle="bold" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="28dp"
                    android:orientation="vertical">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <ImageView
                            android:layout_width="24dp"
                            android:layout_height="24dp"
                            android:layout_gravity="left"
                            android:src="@drawable/plocation" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_vertical"
                            android:layout_marginLeft="8dp"
                            android:text="@string/address"
                            android:textAlignment="viewStart"
                            android:textColor="@color/white"
                            android:textSize="15dp"
                            tools:ignore="RtlCompat" />

                    </LinearLayout>

                    <LinearLayout
                        android:id="@+id/llCall"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="16dp"
                        android:orientation="horizontal">

                        <ImageView
                            android:layout_width="24dp"
                            android:layout_height="24dp"
                            android:layout_gravity="left"
                            android:padding="1dp"
                            android:src="@drawable/p_phon_call" />

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_vertical"
                            android:layout_marginLeft="8dp"
                            android:text="@string/contact"
                            android:textColor="@color/white"
                            android:textSize="15dp" />

                    </LinearLayout>

                    <LinearLayout
                        android:id="@+id/llMail"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="16dp"
                        android:orientation="horizontal">

                        <ImageView
                            android:layout_width="24dp"
                            android:layout_height="24dp"
                            android:layout_gravity="left"
                            android:padding="2dp"
                            android:src="@drawable/pmail" />

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_vertical"
                            android:layout_marginLeft="8dp"
                            android:text="@string/mail"
                            android:textColor="@color/white"
                            android:textSize="15dp" />

                    </LinearLayout>

                </LinearLayout>
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:orientation="horizontal"
            android:visibility="gone"
            android:weightSum="20">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="15">

                <ImageView
                    android:layout_width="70dp"
                    android:layout_height="70dp"
                    android:layout_gravity="center"
                    android:background="@drawable/circle"
                    android:padding="16dp"
                    android:src="@drawable/help" />
            </RelativeLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="25dp"
                android:layout_weight="5"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Administration"
                    android:textColor="@color/yellow"
                    android:textSize="15dp"
                    android:textStyle="bold" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="28dp"
                    android:orientation="vertical">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <ImageView
                            android:layout_width="24dp"
                            android:layout_height="24dp"
                            android:layout_gravity="left"
                            android:src="@drawable/puser" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_vertical"
                            android:layout_marginLeft="8dp"
                            android:text="Name"
                            android:textColor="@color/white"
                            android:textSize="15dp" />

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="16dp"
                        android:orientation="horizontal">

                        <ImageView
                            android:layout_width="24dp"
                            android:layout_height="24dp"
                            android:layout_gravity="left"
                            android:padding="1dp"
                            android:src="@drawable/p_phon_call" />

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_vertical"
                            android:layout_marginLeft="8dp"
                            android:text="Mobile"
                            android:textColor="@color/white"
                            android:textSize="15dp" />

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="16dp"
                        android:orientation="horizontal">

                        <ImageView
                            android:layout_width="24dp"
                            android:layout_height="24dp"
                            android:layout_gravity="left"
                            android:padding="2dp"
                            android:src="@drawable/pmail" />

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_vertical"
                            android:layout_marginLeft="8dp"
                            android:text="Mail"
                            android:textColor="@color/white"
                            android:textSize="15dp" />

                    </LinearLayout>

                </LinearLayout>
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="60dp"
            android:gravity="center"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/iv_facebook"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:background="@drawable/imagebordercircle"
                android:backgroundTint="@color/yellow"
                android:src="@drawable/fb"
                android:tint="@color/yellow" />

            <ImageView
                android:id="@+id/iv_insta"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_marginLeft="24dp"
                android:background="@drawable/imagebordercircle"
                android:backgroundTint="@color/yellow"
                android:padding="8dp"
                android:src="@drawable/ic_instragram"
                android:tint="@color/yellow" />

            <ImageView
                android:id="@+id/iv_twiter"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_marginLeft="24dp"
                android:background="@drawable/imagebordercircle"
                android:backgroundTint="@color/yellow"
                android:src="@drawable/twiter"
                android:tint="@color/yellow" />
        </LinearLayout>
    </LinearLayout>

</ScrollView>